// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > # Of Files Generated 1`] = `22`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > changelog/@minecraft/module.json 1`] = `
"[
  {
    "version": "2.1.0-internal.1.2.3-preview.5",
    "dependencies": [],
    "peer_dependencies": [],
    "classes": [],
    "interfaces": [],
    "errors": [],
    "objects": [],
    "functions": [
      {
        "arguments": [
          {
            "details": [],
            "name": "arg",
            "type": {
              "is_bind_type": false,
              "is_errorable": false,
              "name": "string"
            }
          }
        ],
        "is_constructor": false,
        "name": "TestFunction",
        "return_type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "int32"
        },
        "call_privilege": []
      }
    ],
    "constants": [
      {
        "name": "GlobalConstantInternal",
        "$added": true,
        "is_read_only": true,
        "is_static": true,
        "type": {
          "is_bind_type": false,
          "is_errorable": false,
          "name": "int32"
        },
        "value": 8
      }
    ],
    "enums": [],
    "type_aliases": []
  },
  {
    "version": "2.1.0-beta.1.2.3-preview.5",
    "dependencies": [],
    "peer_dependencies": [],
    "classes": [],
    "interfaces": [],
    "errors": [],
    "objects": [],
    "functions": [
      {
        "arguments": [
          {
            "details": [],
            "name": "arg",
            "type": {
              "is_bind_type": false,
              "is_errorable": false,
              "name": "string"
            }
          }
        ],
        "is_constructor": false,
        "name": "TestFunction",
        "return_type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "int32"
        },
        "call_privilege": []
      }
    ],
    "constants": [
      {
        "name": "GlobalConstantBeta",
        "$added": true,
        "is_read_only": true,
        "is_static": true,
        "type": {
          "is_bind_type": false,
          "is_errorable": false,
          "name": "int32"
        },
        "value": 8
      }
    ],
    "enums": [],
    "type_aliases": []
  },
  {
    "version": "2.0.0-rc.1.2.3-preview.5",
    "dependencies": [],
    "peer_dependencies": [],
    "classes": [],
    "interfaces": [],
    "errors": [],
    "objects": [],
    "functions": [
      {
        "name": "TestFunction",
        "$added": true,
        "arguments": [
          {
            "details": null,
            "name": "arg",
            "type": {
              "is_bind_type": false,
              "is_errorable": false,
              "name": "string"
            }
          }
        ],
        "is_constructor": false,
        "return_type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "int32"
        },
        "call_privilege": [
          {
            "name": "restricted_execution"
          }
        ]
      }
    ],
    "constants": [
      {
        "name": "GlobalConstantRemovedInV2",
        "$removed": true,
        "is_read_only": true,
        "is_static": true,
        "type": {
          "is_bind_type": false,
          "is_errorable": false,
          "name": "int32"
        },
        "value": 8
      }
    ],
    "enums": [],
    "type_aliases": []
  },
  {
    "version": "1.0.0-rc.1.2.3-preview.5",
    "$added": true,
    "constants": [
      {
        "is_read_only": true,
        "is_static": true,
        "name": "GlobalConstantStable",
        "type": {
          "is_bind_type": false,
          "is_errorable": false,
          "name": "int32"
        },
        "value": 8
      },
      {
        "is_read_only": true,
        "is_static": true,
        "name": "GlobalConstantRemovedInV2",
        "type": {
          "is_bind_type": false,
          "is_errorable": false,
          "name": "int32"
        },
        "value": 8
      }
    ],
    "minecraft_version": "1.0.0",
    "name": "@minecraft/module",
    "uuid": "a05a18e6-279a-4d87-862d-2a85442a2aed",
    "module_type": "script"
  }
]"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > msdocs/priorscriptapi/TOC.yml 1`] = `
"  - name: minecraft/module 1.x.x
    items:
    - name: minecraft/module 1.x.x
      href: minecraft/module-1xx/minecraft-module.md
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > msdocs/priorscriptapi/minecraft/module-1xx/minecraft-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/module-1xx Module
description: Contents of the @minecraft/module module (Version 1.x.x)
monikerRange: "=minecraft-bedrock-experimental"
---
# \`@minecraft/module\` Module (Version 1.x.x)

The description for the module in V1 stable

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/minecraft/module/minecraft-module.md).

> [!CAUTION]
> This module is still in pre-release.  It may change or it may be removed in future releases.

## Manifest Details
\`\`\`json
{
    "module_name": "@minecraft/module",
    "version": "1.0.0-rc.1.2.3-preview.5"
}
\`\`\`

## Available Versions
- \`1.0.0-rc.1.2.3-preview.5\`

## Constants

### **GlobalConstantRemovedInV2**
\`static read-only GlobalConstantRemovedInV2 = 8;\`

Type: *number*

> [!CAUTION]
> This property is deprecated and will be removed in 2.0.0.

### **GlobalConstantStable**
\`static read-only GlobalConstantStable = 8;\`

The description for GlobalConstantStable in V1 stable

Type: *number*
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: minecraft/module
    items:
    - name: minecraft/module
      href: minecraft/module/minecraft-module.md
    - name: minecraft/module Changelog
      href: minecraft/module/changelog.md
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > msdocs/scriptapi/minecraft/module/changelog.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/module Changelog
description: Changelog of the \`@minecraft/module\` module
---
# \`@minecraft/module\` Changelog

## Version Changes
- [2.1.0-internal.1.2.3-preview.5](#210-internal123-preview5)
- [2.1.0-beta.1.2.3-preview.5](#210-beta123-preview5)
- [2.0.0-rc.1.2.3-preview.5](#200-rc123-preview5)
- [1.0.0-rc.1.2.3-preview.5](#100-rc123-preview5)

## 2.1.0-internal.1.2.3-preview.5
#### Added constant \`GlobalConstantInternal\`
## 2.1.0-beta.1.2.3-preview.5
#### Added constant \`GlobalConstantBeta\`
## 2.0.0-rc.1.2.3-preview.5
#### Added function \`TestFunction\`
#### Removed constant \`GlobalConstantRemovedInV2\`
## 1.0.0-rc.1.2.3-preview.5
#### Added \`@minecraft/module\` Module
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > msdocs/scriptapi/minecraft/module/minecraft-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/module Module
description: Contents of the @minecraft/module module
monikerRange: "=minecraft-bedrock-experimental"
---
# \`@minecraft/module\` Module

The description for the module in internal

> [!CAUTION]
> This module is still in pre-release.  It may change or it may be removed in future releases.

## [Changelog](changelog.md)

## Manifest Details
\`\`\`json
{
    "module_name": "@minecraft/module",
    "version": "2.1.0-internal.1.2.3-preview.5"
}
\`\`\`
This is version 2.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`2.1.0-internal.1.2.3-preview.5\`
- \`2.1.0-beta.1.2.3-preview.5\`
- \`2.0.0-rc.1.2.3-preview.5\`

### Prior Versions

The following API versions are from a major version that is documented here: [*@minecraft/module*](../../../priorscriptapi/minecraft/module-1xx/minecraft-module.md):
- \`1.0.0-rc.1.2.3-preview.5\`


## Functions

::: moniker range="=minecraft-bedrock-experimental"
### **TestFunction**
\`
TestFunction(arg: string): number
\`

Test function woot woot!

#### **Parameters**
- **arg**: *string*
  
  default arg description!.

**Returns** [*number*](number.md) - Returns default stuff.

> [!CAUTION]
> This function is still in pre-release.  Its signature may change or it may be removed in future releases.
::: moniker-end

## Constants

::: moniker range="=minecraft-bedrock-experimental"
### **GlobalConstantBeta**
\`static read-only GlobalConstantBeta = 8;\`

Type: *number*

> [!CAUTION]
> This property is still in pre-release.  Its signature may change or it may be removed in future releases.
::: moniker-end

::: moniker range="=minecraft-bedrock-experimental"
### **GlobalConstantInternal**
\`static read-only GlobalConstantInternal = 8;\`

Type: *number*

> [!CAUTION]
> This property is still in pre-release.  Its signature may change or it may be removed in future releases.
::: moniker-end

### **GlobalConstantStable**
\`static read-only GlobalConstantStable = 8;\`

The description for GlobalConstantStable in V2 stable

Type: *number*
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > npm/types/@minecraft/module@1.0.0-rc.1.2.3-preview.5/README.md 1`] = `
"# \`@minecraft/module\`

The description for the module in V1 stable

## **NOTE: This version of this module is still in pre-release.  It may change or it may be removed in future releases.**

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/priorscriptapi/minecraft/module-1xx/minecraft-module"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > npm/types/@minecraft/module@1.0.0-rc.1.2.3-preview.5/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @preview
 * @packageDocumentation
 * The description for the module in V1 stable
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
/**
 * @deprecated This property is deprecated and will be removed in 2.0.0.
 */
export const GlobalConstantRemovedInV2 = 8;
/**
 * @remarks
 * The description for GlobalConstantStable in V1 stable
 *
 */
export const GlobalConstantStable = 8;
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > npm/types/@minecraft/module@1.0.0-rc.1.2.3-preview.5/package.json 1`] = `
"{
  "name": "@minecraft/module",
  "version": "1.0.0-rc.1.2.3-preview.5",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > npm/types/@minecraft/module@2.0.0-rc.1.2.3-preview.5/README.md 1`] = `
"# \`@minecraft/module\`

The description for the module in V2 stable

## **NOTE: This version of this module is still in pre-release.  It may change or it may be removed in future releases.**

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/scriptapi/minecraft/module/minecraft-module"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > npm/types/@minecraft/module@2.0.0-rc.1.2.3-preview.5/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @preview
 * @packageDocumentation
 * The description for the module in V2 stable
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "2.0.0"
 * }
 * \`\`\`
 *
 */
/**
 * @rc
 * @remarks
 * Test function woot woot!
 *
 * @param arg
 * default arg description!.
 * @returns
 * Returns default stuff.
 */
export function TestFunction(arg: string): number;
/**
 * @remarks
 * The description for GlobalConstantStable in V2 stable
 *
 */
export const GlobalConstantStable = 8;
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > npm/types/@minecraft/module@2.0.0-rc.1.2.3-preview.5/package.json 1`] = `
"{
  "name": "@minecraft/module",
  "version": "2.0.0-rc.1.2.3-preview.5",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > npm/types/@minecraft/module@2.1.0-beta.1.2.3-preview.5/README.md 1`] = `
"# \`@minecraft/module\`

The description for the module in beta

## **NOTE: This version of this module is still in pre-release.  It may change or it may be removed in future releases.**

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/scriptapi/minecraft/module/minecraft-module"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > npm/types/@minecraft/module@2.1.0-beta.1.2.3-preview.5/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @beta
 * @packageDocumentation
 * The description for the module in beta
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "2.1.0-beta"
 * }
 * \`\`\`
 *
 */
/**
 * @rc
 * @remarks
 * Test function woot woot!
 *
 * @param arg
 * default arg description!.
 * @returns
 * Returns default stuff.
 */
export function TestFunction(arg: string): number;
/**
 * @beta
 */
export const GlobalConstantBeta = 8;
/**
 * @remarks
 * The description for GlobalConstantStable in V2 stable
 *
 */
export const GlobalConstantStable = 8;
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > npm/types/@minecraft/module@2.1.0-beta.1.2.3-preview.5/package.json 1`] = `
"{
  "name": "@minecraft/module",
  "version": "2.1.0-beta.1.2.3-preview.5",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > npm/types/@minecraft/module@2.1.0-internal.1.2.3-preview.5/README.md 1`] = `
"# \`@minecraft/module\`

The description for the module in internal

## **NOTE: This version of this module is still in pre-release.  It may change or it may be removed in future releases.**

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/scriptapi/minecraft/module/minecraft-module"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > npm/types/@minecraft/module@2.1.0-internal.1.2.3-preview.5/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @internal
 * @packageDocumentation
 * The description for the module in internal
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "2.1.0-internal"
 * }
 * \`\`\`
 *
 */
/**
 * @rc
 * @remarks
 * Test function woot woot!
 *
 * @param arg
 * default arg description!.
 * @returns
 * Returns default stuff.
 */
export function TestFunction(arg: string): number;
/**
 * @beta
 */
export const GlobalConstantBeta = 8;
/**
 * @internal
 */
export const GlobalConstantInternal = 8;
/**
 * @remarks
 * The description for GlobalConstantStable in V2 stable
 *
 */
export const GlobalConstantStable = 8;
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > npm/types/@minecraft/module@2.1.0-internal.1.2.3-preview.5/package.json 1`] = `
"{
  "name": "@minecraft/module",
  "version": "2.1.0-internal.1.2.3-preview.5",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > typescript/@minecraft/module@1.0.0-rc.1.2.3-preview.5.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @preview
 * @packageDocumentation
 * The description for the module in V1 stable
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
/**
 * @deprecated This property is deprecated and will be removed in 2.0.0.
 */
export const GlobalConstantRemovedInV2 = 8;
/**
 * @remarks
 * The description for GlobalConstantStable in V1 stable
 *
 */
export const GlobalConstantStable = 8;
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > typescript/@minecraft/module@2.0.0-rc.1.2.3-preview.5.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @preview
 * @packageDocumentation
 * The description for the module in V2 stable
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "2.0.0"
 * }
 * \`\`\`
 *
 */
/**
 * @rc
 * @remarks
 * Test function woot woot!
 *
 * @param arg
 * default arg description!.
 * @returns
 * Returns default stuff.
 */
export function TestFunction(arg: string): number;
/**
 * @remarks
 * The description for GlobalConstantStable in V2 stable
 *
 */
export const GlobalConstantStable = 8;
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > typescript/@minecraft/module@2.1.0-beta.1.2.3-preview.5.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @beta
 * @packageDocumentation
 * The description for the module in beta
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "2.1.0-beta"
 * }
 * \`\`\`
 *
 */
/**
 * @rc
 * @remarks
 * Test function woot woot!
 *
 * @param arg
 * default arg description!.
 * @returns
 * Returns default stuff.
 */
export function TestFunction(arg: string): number;
/**
 * @beta
 */
export const GlobalConstantBeta = 8;
/**
 * @remarks
 * The description for GlobalConstantStable in V2 stable
 *
 */
export const GlobalConstantStable = 8;
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in preview > typescript/@minecraft/module@2.1.0-internal.1.2.3-preview.5.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @internal
 * @packageDocumentation
 * The description for the module in internal
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "2.1.0-internal"
 * }
 * \`\`\`
 *
 */
/**
 * @rc
 * @remarks
 * Test function woot woot!
 *
 * @param arg
 * default arg description!.
 * @returns
 * Returns default stuff.
 */
export function TestFunction(arg: string): number;
/**
 * @beta
 */
export const GlobalConstantBeta = 8;
/**
 * @internal
 */
export const GlobalConstantInternal = 8;
/**
 * @remarks
 * The description for GlobalConstantStable in V2 stable
 *
 */
export const GlobalConstantStable = 8;
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > # Of Files Generated 1`] = `22`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > changelog/@minecraft/module.json 1`] = `
"[
  {
    "version": "2.1.0-internal.1.2.3-stable",
    "dependencies": [],
    "peer_dependencies": [],
    "classes": [],
    "interfaces": [],
    "errors": [],
    "objects": [],
    "functions": [
      {
        "arguments": [
          {
            "details": [],
            "name": "arg",
            "type": {
              "is_bind_type": false,
              "is_errorable": false,
              "name": "string"
            }
          }
        ],
        "is_constructor": false,
        "name": "TestFunction",
        "return_type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "int32"
        },
        "call_privilege": []
      }
    ],
    "constants": [
      {
        "name": "GlobalConstantInternal",
        "$added": true,
        "is_read_only": true,
        "is_static": true,
        "type": {
          "is_bind_type": false,
          "is_errorable": false,
          "name": "int32"
        },
        "value": 8
      }
    ],
    "enums": [],
    "type_aliases": []
  },
  {
    "version": "2.1.0-beta.1.2.3-stable",
    "dependencies": [],
    "peer_dependencies": [],
    "classes": [],
    "interfaces": [],
    "errors": [],
    "objects": [],
    "functions": [
      {
        "arguments": [
          {
            "details": [],
            "name": "arg",
            "type": {
              "is_bind_type": false,
              "is_errorable": false,
              "name": "string"
            }
          }
        ],
        "is_constructor": false,
        "name": "TestFunction",
        "return_type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "int32"
        },
        "call_privilege": []
      }
    ],
    "constants": [
      {
        "name": "GlobalConstantBeta",
        "$added": true,
        "is_read_only": true,
        "is_static": true,
        "type": {
          "is_bind_type": false,
          "is_errorable": false,
          "name": "int32"
        },
        "value": 8
      }
    ],
    "enums": [],
    "type_aliases": []
  },
  {
    "version": "2.0.0",
    "dependencies": [],
    "peer_dependencies": [],
    "classes": [],
    "interfaces": [],
    "errors": [],
    "objects": [],
    "functions": [
      {
        "name": "TestFunction",
        "$added": true,
        "arguments": [
          {
            "details": null,
            "name": "arg",
            "type": {
              "is_bind_type": false,
              "is_errorable": false,
              "name": "string"
            }
          }
        ],
        "is_constructor": false,
        "return_type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "int32"
        },
        "call_privilege": [
          {
            "name": "restricted_execution"
          }
        ]
      }
    ],
    "constants": [
      {
        "name": "GlobalConstantRemovedInV2",
        "$removed": true,
        "is_read_only": true,
        "is_static": true,
        "type": {
          "is_bind_type": false,
          "is_errorable": false,
          "name": "int32"
        },
        "value": 8
      }
    ],
    "enums": [],
    "type_aliases": []
  },
  {
    "version": "1.0.0",
    "$added": true,
    "constants": [
      {
        "is_read_only": true,
        "is_static": true,
        "name": "GlobalConstantStable",
        "type": {
          "is_bind_type": false,
          "is_errorable": false,
          "name": "int32"
        },
        "value": 8
      },
      {
        "is_read_only": true,
        "is_static": true,
        "name": "GlobalConstantRemovedInV2",
        "type": {
          "is_bind_type": false,
          "is_errorable": false,
          "name": "int32"
        },
        "value": 8
      }
    ],
    "minecraft_version": "1.0.0",
    "name": "@minecraft/module",
    "uuid": "a05a18e6-279a-4d87-862d-2a85442a2aed",
    "module_type": "script"
  }
]"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > msdocs/priorscriptapi/TOC.yml 1`] = `
"  - name: minecraft/module 1.x.x
    items:
    - name: minecraft/module 1.x.x
      href: minecraft/module-1xx/minecraft-module.md
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > msdocs/priorscriptapi/minecraft/module-1xx/minecraft-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/module-1xx Module
description: Contents of the @minecraft/module module (Version 1.x.x)
---
# \`@minecraft/module\` Module (Version 1.x.x)

The description for the module in V1 stable

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/minecraft/module/minecraft-module.md).

## Manifest Details
\`\`\`json
{
    "module_name": "@minecraft/module",
    "version": "1.0.0"
}
\`\`\`

## Available Versions
- \`1.0.0\`

## Constants

### **GlobalConstantRemovedInV2**
\`static read-only GlobalConstantRemovedInV2 = 8;\`

Type: *number*

> [!CAUTION]
> This property is deprecated and will be removed in 2.0.0.

### **GlobalConstantStable**
\`static read-only GlobalConstantStable = 8;\`

The description for GlobalConstantStable in V1 stable

Type: *number*
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: minecraft/module
    items:
    - name: minecraft/module
      href: minecraft/module/minecraft-module.md
    - name: minecraft/module Changelog
      href: minecraft/module/changelog.md
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > msdocs/scriptapi/minecraft/module/changelog.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/module Changelog
description: Changelog of the \`@minecraft/module\` module
---
# \`@minecraft/module\` Changelog

## Version Changes
- [2.1.0-internal.1.2.3-stable](#210-internal123-stable)
- [2.1.0-beta.1.2.3-stable](#210-beta123-stable)
- [2.0.0](#200)
- [1.0.0](#100)

## 2.1.0-internal.1.2.3-stable
#### Added constant \`GlobalConstantInternal\`
## 2.1.0-beta.1.2.3-stable
#### Added constant \`GlobalConstantBeta\`
## 2.0.0
#### Added function \`TestFunction\`
#### Removed constant \`GlobalConstantRemovedInV2\`
## 1.0.0
#### Added \`@minecraft/module\` Module
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > msdocs/scriptapi/minecraft/module/minecraft-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/module Module
description: Contents of the @minecraft/module module
---
# \`@minecraft/module\` Module

The description for the module in internal

## [Changelog](changelog.md)

## Manifest Details
\`\`\`json
{
    "module_name": "@minecraft/module",
    "version": "2.0.0"
}
\`\`\`
This is version 2.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`2.1.0-internal.1.2.3-stable\`
- \`2.1.0-beta.1.2.3-stable\`
- \`2.0.0\`

### Prior Versions

The following API versions are from a major version that is documented here: [*@minecraft/module*](../../../priorscriptapi/minecraft/module-1xx/minecraft-module.md):
- \`1.0.0\`


## Functions

### **TestFunction**
\`
TestFunction(arg: string): number
\`

Test function woot woot!

#### **Parameters**
- **arg**: *string*
  
  default arg description!.

**Returns** [*number*](number.md) - Returns default stuff.

## Constants

::: moniker range="=minecraft-bedrock-experimental"
### **GlobalConstantBeta**
\`static read-only GlobalConstantBeta = 8;\`

Type: *number*

> [!CAUTION]
> This property is still in pre-release.  Its signature may change or it may be removed in future releases.
::: moniker-end

::: moniker range="=minecraft-bedrock-experimental"
### **GlobalConstantInternal**
\`static read-only GlobalConstantInternal = 8;\`

Type: *number*

> [!CAUTION]
> This property is still in pre-release.  Its signature may change or it may be removed in future releases.
::: moniker-end

### **GlobalConstantStable**
\`static read-only GlobalConstantStable = 8;\`

The description for GlobalConstantStable in V2 stable

Type: *number*
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > npm/types/@minecraft/module@1.0.0/README.md 1`] = `
"# \`@minecraft/module\`

The description for the module in V1 stable

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/priorscriptapi/minecraft/module-1xx/minecraft-module"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > npm/types/@minecraft/module@1.0.0/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 * The description for the module in V1 stable
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
/**
 * @deprecated This property is deprecated and will be removed in 2.0.0.
 */
export const GlobalConstantRemovedInV2 = 8;
/**
 * @remarks
 * The description for GlobalConstantStable in V1 stable
 *
 */
export const GlobalConstantStable = 8;
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > npm/types/@minecraft/module@1.0.0/package.json 1`] = `
"{
  "name": "@minecraft/module",
  "version": "1.0.0",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > npm/types/@minecraft/module@2.0.0/README.md 1`] = `
"# \`@minecraft/module\`

The description for the module in V2 stable

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/scriptapi/minecraft/module/minecraft-module"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > npm/types/@minecraft/module@2.0.0/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 * The description for the module in V2 stable
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "2.0.0"
 * }
 * \`\`\`
 *
 */
/**
 * @remarks
 * Test function woot woot!
 *
 * @param arg
 * default arg description!.
 * @returns
 * Returns default stuff.
 */
export function TestFunction(arg: string): number;
/**
 * @remarks
 * The description for GlobalConstantStable in V2 stable
 *
 */
export const GlobalConstantStable = 8;
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > npm/types/@minecraft/module@2.0.0/package.json 1`] = `
"{
  "name": "@minecraft/module",
  "version": "2.0.0",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > npm/types/@minecraft/module@2.1.0-beta.1.2.3-stable/README.md 1`] = `
"# \`@minecraft/module\`

The description for the module in beta

## **NOTE: This version of this module is still in pre-release.  It may change or it may be removed in future releases.**

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/scriptapi/minecraft/module/minecraft-module"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > npm/types/@minecraft/module@2.1.0-beta.1.2.3-stable/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @beta
 * @packageDocumentation
 * The description for the module in beta
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "2.1.0-beta"
 * }
 * \`\`\`
 *
 */
/**
 * @remarks
 * Test function woot woot!
 *
 * @param arg
 * default arg description!.
 * @returns
 * Returns default stuff.
 */
export function TestFunction(arg: string): number;
/**
 * @beta
 */
export const GlobalConstantBeta = 8;
/**
 * @remarks
 * The description for GlobalConstantStable in V2 stable
 *
 */
export const GlobalConstantStable = 8;
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > npm/types/@minecraft/module@2.1.0-beta.1.2.3-stable/package.json 1`] = `
"{
  "name": "@minecraft/module",
  "version": "2.1.0-beta.1.2.3-stable",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > npm/types/@minecraft/module@2.1.0-internal.1.2.3-stable/README.md 1`] = `
"# \`@minecraft/module\`

The description for the module in internal

## **NOTE: This version of this module is still in pre-release.  It may change or it may be removed in future releases.**

See full documentation for this module here:

https://learn.microsoft.com/en-us/minecraft/creator/scriptapi/minecraft/module/minecraft-module"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > npm/types/@minecraft/module@2.1.0-internal.1.2.3-stable/index.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @internal
 * @packageDocumentation
 * The description for the module in internal
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "2.1.0-internal"
 * }
 * \`\`\`
 *
 */
/**
 * @remarks
 * Test function woot woot!
 *
 * @param arg
 * default arg description!.
 * @returns
 * Returns default stuff.
 */
export function TestFunction(arg: string): number;
/**
 * @beta
 */
export const GlobalConstantBeta = 8;
/**
 * @internal
 */
export const GlobalConstantInternal = 8;
/**
 * @remarks
 * The description for GlobalConstantStable in V2 stable
 *
 */
export const GlobalConstantStable = 8;
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > npm/types/@minecraft/module@2.1.0-internal.1.2.3-stable/package.json 1`] = `
"{
  "name": "@minecraft/module",
  "version": "2.1.0-internal.1.2.3-stable",
  "description": "",
  "contributors": [
    {
      "name": "Jake Shirley",
      "email": "jake@xbox.com"
    },
    {
      "name": "Mike Ammerlaan",
      "email": "mikeam@microsoft.com"
    }
  ],
  "license": "MIT"
}"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > typescript/@minecraft/module@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 * The description for the module in V1 stable
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
/**
 * @deprecated This property is deprecated and will be removed in 2.0.0.
 */
export const GlobalConstantRemovedInV2 = 8;
/**
 * @remarks
 * The description for GlobalConstantStable in V1 stable
 *
 */
export const GlobalConstantStable = 8;
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > typescript/@minecraft/module@2.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 * The description for the module in V2 stable
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "2.0.0"
 * }
 * \`\`\`
 *
 */
/**
 * @remarks
 * Test function woot woot!
 *
 * @param arg
 * default arg description!.
 * @returns
 * Returns default stuff.
 */
export function TestFunction(arg: string): number;
/**
 * @remarks
 * The description for GlobalConstantStable in V2 stable
 *
 */
export const GlobalConstantStable = 8;
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > typescript/@minecraft/module@2.1.0-beta.1.2.3-stable.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @beta
 * @packageDocumentation
 * The description for the module in beta
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "2.1.0-beta"
 * }
 * \`\`\`
 *
 */
/**
 * @remarks
 * Test function woot woot!
 *
 * @param arg
 * default arg description!.
 * @returns
 * Returns default stuff.
 */
export function TestFunction(arg: string): number;
/**
 * @beta
 */
export const GlobalConstantBeta = 8;
/**
 * @remarks
 * The description for GlobalConstantStable in V2 stable
 *
 */
export const GlobalConstantStable = 8;
"
`;

exports[`Minecraft Version Shipped Stable > Generates correct output for module with stable shipped version and beta in a new version in stable > typescript/@minecraft/module@2.1.0-internal.1.2.3-stable.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @internal
 * @packageDocumentation
 * The description for the module in internal
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "2.1.0-internal"
 * }
 * \`\`\`
 *
 */
/**
 * @remarks
 * Test function woot woot!
 *
 * @param arg
 * default arg description!.
 * @returns
 * Returns default stuff.
 */
export function TestFunction(arg: string): number;
/**
 * @beta
 */
export const GlobalConstantBeta = 8;
/**
 * @internal
 */
export const GlobalConstantInternal = 8;
/**
 * @remarks
 * The description for GlobalConstantStable in V2 stable
 *
 */
export const GlobalConstantStable = 8;
"
`;
